--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-pydantic
-elasticsearch
-elasticsearch-dsl
-minecraft_data
-more_itertools
-networkx
+elasticsearch==7.13.4
+elasticsearch_dsl==7.4.0
+minecraft_data==3.20.0
+more_itertools==8.7.0
+networkx==2.5.1
+pandas==1.2.4
+pydantic==1.10.2
+python-dotenv==1.0.0
+setuptools==49.2.1
