--- a/.github/workflows/python-auto-lint.yml
+++ b/.github/workflows/python-auto-lint.yml
@@ -2,6 +2,9 @@ name: Format python code
 on:
     push:
         branches: [ "main" ]
+
+workflow_dispatch:
+
 jobs:
   autopep8:
     runs-on: ubuntu-latest
