--- a/.github/workflows/python-auto-lint.yml
+++ b/.github/workflows/python-auto-lint.yml
@@ -1,9 +1,8 @@
 name: Format python code
 on:
-    push:
-        branches: [ "main" ]
-
-workflow_dispatch:
+  schedule:
+    - cron: "0 0 1 * *"
+  workflow_dispatch:
 
 jobs:
   autopep8:
