--- a/.github/workflows/python-auto-lint.yml
+++ b/.github/workflows/python-auto-lint.yml
@@ -12,7 +12,7 @@ jobs:
       - name: autopep8
         uses: peter-evans/autopep8@v2
         with:
-          args: --recursive --in-place --aggressive --aggressive .
+          args: --recursive --in-place --aggressive --max-line-length 100 .
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
