--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-elasticsearch==7.13.4
-elasticsearch_dsl==7.4.0
+elasticsearch==7.17.9
+elasticsearch_dsl==7.4.1
+fastapi==0.104.0
+matplotlib==3.6.2
 minecraft_data==3.20.0
 more_itertools==8.7.0
-networkx==2.5.1
-pandas==1.2.4
+networkx==3.1
 pydantic==1.10.2
+pytest==7.2.0
 python-dotenv==1.0.0
-setuptools==49.2.1
+PyYAML==6.0.1
+uvicorn==0.23.2
+domain_models @ git+https://github.com/swarmly-io/domain-models.git@v0.1.0.27
